--- a/Implement_Project/Views/Shared/_Layout.cshtml
+++ b/Implement_Project/Views/Shared/_Layout.cshtml
@@ -10,6 +10,16 @@
 </head>
 <body>
     <header>
+        /*
+        1. Basic_Flow_Project
+        2. Entity Packages
+        3. Data String
+        4. UpdateDatabase
+        5. EntityFramework
+        6. DbContext
+        7. Migration and UpdateDatase
+        8. Migration history
+        */
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Implement_Project</a>
