--- a/Implement_Project/Views/Category/Edit.cshtml
+++ b/Implement_Project/Views/Category/Edit.cshtml
@@ -10,7 +10,7 @@
         <div class="col-6 my-4">
             <label class="form-label" asp-for="Name"></label>
             <input type="text" class="form-control" placeholder="Disabled input" asp-for="Name">
-            <span asp-validation-for="Name"></span>
+            <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
         <div class="col-6 my-4">
@@ -20,7 +20,7 @@
                 <option>2</option>
                 <option>3</option>
             </select>
-            <span asp-validation-for="DisplayOrder"></span>
+            <span asp-validation-for="DisplayOrder" class="text-danger"></span>
         </div>
 
         <div class="col-6 my-4">
