1. CustomValidation 2. asp-validation-summery tag helper

--- a/Implement_Project/Views/Category/Create.cshtml
+++ b/Implement_Project/Views/Category/Create.cshtml
@@ -5,6 +5,9 @@
 
         <h1>Add Category</h1>
 
+
+        <div asp-validation-summary="All"></div>
+
         <div class="col-6 my-4">
             <label class="form-label" asp-for="Name"></label>
             <input type="text" class="form-control" placeholder="Disabled input" asp-for="Name">
