--- a/Implement_Project/Views/Category/Create.cshtml
+++ b/Implement_Project/Views/Category/Create.cshtml
@@ -4,7 +4,7 @@
     <div class="row mt-5">
 
         <h1>Add Category</h1>
-
+        @*__________ Server Side Validation ______________*@
         @*
             All
         <div asp-validation-summary="All"></div>
@@ -41,3 +41,10 @@
         </div>
     </div>
 </form>
+
+@*__________ Client Side Validation ______________*@
+@section Scripts{
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
