1. Local_Toastr Notificatin 2. CDN notification 3. Unique Name Validation 4. Missing Comments

--- a/Implement_Project/Views/Shared/_Notification.cshtml
+++ b/Implement_Project/Views/Shared/_Notification.cshtml
@@ -1,5 +1,4 @@
-﻿
-@if (TempData["Success"] != null)
+﻿@if (TempData["Success"] != null)
 {
     <div class="alert alert-success" role="alert">
         @TempData["Success"]
@@ -19,3 +18,4 @@
         @TempData["info"]
     </div>
 }
+
